hands-on-projects/project-05-observability-stack/main/solution/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observe-app
  namespace: observability
  labels:
    app: observe-app
    # This label is referenced by the ServiceMonitor selector
    monitoring: "true"
spec:
  type: ClusterIP
  selector:
    app: observe-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
