hands-on-projects/project-05-observability-stack/main/solution/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observe-app
  namespace: observability
  labels:
    app: observe-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: observe-app.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observe-app
                port:
                  name: http
